--- a/index.html
+++ b/index.html
@@ -1,31 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="assets/images/favicon-32x32.png"
+    />
     <title>News Homepage</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-        <header class="header">
-            <div class="navigation">
-                <div class="logo">
-                    <img src="assets/images/logo.svg" alt="" class="logo-img">
-                </div>
-                <nav class="navbar">
-                    <ul class="menu">
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="#">New</a></li>
-                        <li><a href="#">Popular</a></li>
-                        <li><a href="#">Trending</a></li>
-                        <li><a href="#">Categories</a></li>
-                    </ul>
-                    <img src="assets/images/icon-menu.svg" alt="" id="open-menu-btn">
-                    <img src="assets/images/icon-menu-close.svg" alt="" id="close-menu-btn">
-                </nav>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <header class="header">
+      <div class="navigation">
+        <div class="logo">
+          <img src="assets/images/logo.svg" alt="" class="logo-img" />
+        </div>
+        <nav class="navbar">
+          <ul class="menu">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="#">New</a></li>
+            <li><a href="#">Popular</a></li>
+            <li><a href="#">Trending</a></li>
+            <li><a href="#">Categories</a></li>
+          </ul>
+          <img src="assets/images/icon-menu.svg" alt="" id="open-menu-btn" />
+          <img
+            src="assets/images/icon-menu-close.svg"
+            alt=""
+            id="close-menu-btn"
+          />
+        </nav>
+      </div>
+    </header>
+
+    <main class="main-container">
+      <div class="hero-layout">
+        <div class="grid-1">
+          <img src="assets/images/image-web-3-desktop.jpg" alt="" />
+        </div>
+        <div class="grid-2">
+          <h1>The Bright Future of Web 3.0?</h1>
+        </div>
+        <div class="grid-3">
+          <p>
+            We dive into the next evolution of the web that claims to put the
+            power of the platforms back into the hands of the people. But is it
+            really fulfilling its promise?
+          </p>
+          <a href="#">Read More</a>
+        </div>
+        <div class="grid-4">
+          <aside class="sidebar">
+            <h2>New</h2>
+            <div class="new-blog-topics">
+              <h4><a href="#">Hydrogen VS Electric Cars</a></h4>
+              <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
             </div>
-        </header>
+            <div class="new-blog-topics">
+              <h4><a href="#">The Downsides of AI Artistry</a></h4>
+              <p>
+                What are the possible adverse effects of on-demand AI image
+                generation?
+              </p>
+            </div>
+            <div class="new-blog-topics">
+              <h4><a href="#"> Is VC Funding Drying Up?</a></h4>
+              <p>
+                Private funding by VC firms is down 50% YOY. We take a look at
+                what that means.
+              </p>
+            </div>
+          </aside>
+        </div>
+      </div>
+
+      <div class="tech-blog">
+        <div class="topic">
+          <div class="topic-img">
+            <img src="assets/images/image-retro-pcs.jpg" alt="" />
+          </div>
+          <div class="topic-text">
+            <h4>01</h4>
+            <h5>Reviving Retro PCs</h5>
+            <p>What happens when old PCs are given modern upgrades?</p>
+          </div>
+        </div>
+        <div class="topic">
+          <div class="topic-img">
+            <img src="assets/images/image-top-laptops.jpg" alt="" />
+          </div>
+          <div class="topic-text">
+            <h4>02</h4>
+            <h5>Top 10 Laptops of 2022</h5>
+            <p>Our best picks for various needs and budgets.</p>
+          </div>
+        </div>
+        <div class="topic">
+          <div class="topic-img">
+            <img src="assets/images/image-retro-pcs.jpg" alt="" />
+          </div>
+          <div class="topic-text">
+            <h4>03</h4>
+            <h5>The Growth of Gaming</h5>
+            <p>How the pandemic has sparked fresh opportunities.</p>
+          </div>
+        </div>
+      </div>
+    </main>
     <script src="index.js"></script>
-</body>
+  </body>
 </html>
