Page styling done

--- a/index.html
+++ b/index.html
@@ -51,16 +51,17 @@
             power of the platforms back into the hands of the people. But is it
             really fulfilling its promise?
           </p>
-          <a href="#">Read More</a>
+          <div class="cta">
+            <a href="#">Read More</a>
+          </div>
         </div>
         <div class="grid-4">
-          <aside class="sidebar">
             <h2>New</h2>
-            <div class="new-blog-topics">
+            <div class="new-blog-topics border-bottom">
               <h4><a href="#">Hydrogen VS Electric Cars</a></h4>
               <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
             </div>
-            <div class="new-blog-topics">
+            <div class="new-blog-topics border-bottom">
               <h4><a href="#">The Downsides of AI Artistry</a></h4>
               <p>
                 What are the possible adverse effects of on-demand AI image
@@ -74,7 +75,6 @@
                 what that means.
               </p>
             </div>
-          </aside>
         </div>
       </div>
 
@@ -85,7 +85,7 @@
           </div>
           <div class="topic-text">
             <h4>01</h4>
-            <h5>Reviving Retro PCs</h5>
+            <h5><a href="#">Reviving Retro PCs</a></h5>
             <p>What happens when old PCs are given modern upgrades?</p>
           </div>
         </div>
@@ -95,17 +95,17 @@
           </div>
           <div class="topic-text">
             <h4>02</h4>
-            <h5>Top 10 Laptops of 2022</h5>
+            <h5><a href="#">Top 10 Laptops of 2022</a></h5>
             <p>Our best picks for various needs and budgets.</p>
           </div>
         </div>
         <div class="topic">
           <div class="topic-img">
-            <img src="assets/images/image-retro-pcs.jpg" alt="" />
+            <img src="assets/images/image-gaming-growth.jpg" alt="" />
           </div>
           <div class="topic-text">
             <h4>03</h4>
-            <h5>The Growth of Gaming</h5>
+            <h5> <a href="#">The Growth of Gaming</a></h5>
             <p>How the pandemic has sparked fresh opportunities.</p>
           </div>
         </div>
