completed page design

--- a/index.html
+++ b/index.html
@@ -27,13 +27,15 @@
             <li><a href="#">Trending</a></li>
             <li><a href="#">Categories</a></li>
           </ul>
+        </nav>
+        <div class="mobile-menu-btn">
           <img src="assets/images/icon-menu.svg" alt="" id="open-menu-btn" />
           <img
             src="assets/images/icon-menu-close.svg"
             alt=""
             id="close-menu-btn"
           />
-        </nav>
+        </div>
       </div>
     </header>
 
@@ -57,23 +59,25 @@
         </div>
         <div class="grid-4">
             <h2>New</h2>
-            <div class="new-blog-topics border-bottom">
-              <h4><a href="#">Hydrogen VS Electric Cars</a></h4>
-              <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
-            </div>
-            <div class="new-blog-topics border-bottom">
-              <h4><a href="#">The Downsides of AI Artistry</a></h4>
-              <p>
-                What are the possible adverse effects of on-demand AI image
-                generation?
-              </p>
-            </div>
-            <div class="new-blog-topics">
-              <h4><a href="#"> Is VC Funding Drying Up?</a></h4>
-              <p>
-                Private funding by VC firms is down 50% YOY. We take a look at
-                what that means.
-              </p>
+            <div class="new-blogs">
+              <div class="new-blog-topics border-bottom">
+                <h4><a href="#">Hydrogen VS Electric Cars</a></h4>
+                <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
+              </div>
+              <div class="new-blog-topics border-bottom">
+                <h4><a href="#">The Downsides of AI Artistry</a></h4>
+                <p>
+                  What are the possible adverse effects of on-demand AI image
+                  generation?
+                </p>
+              </div>
+              <div class="new-blog-topics">
+                <h4><a href="#"> Is VC Funding Drying Up?</a></h4>
+                <p>
+                  Private funding by VC firms is down 50% YOY. We take a look at
+                  what that means.
+                </p>
+              </div>
             </div>
         </div>
       </div>
